# processing_cpp

./: .clang-tidy  .clangd  .gitignore  .gitmodules  AccelerationWithVectors.cc  AdditiveWave.cc  AlphaMask.cc  Arc.cc  Arctangent.cc  Arm.cc  Array.cc  Array2D.cc  ArrayObjects.cc  Bezier.cc  BezierVertex.cc  Blur.cc  BouncingBall.cc  BouncyBubbles.cc  Brightness.cc  Brownian.cc  Button.cc  CHANGELOG.txt  CMakeLists.txt  CharacterStrings.cc  CircleCollision.cc  Clock.cc  ColorVariables.cc  Conditionals1.cc  Conditionals2.cc  ContinuousLines.cc  CreateGraphics.cc  CreateImage.cc  DatatypeConversions.cc  Directional.cc  Distance1D.cc  Distance2D.cc  DoubleRandom.cc  Easing.cc  EdgeDection.cc  EmbeddingIteration.cc  (+133 more)
.github/workflows/: cmake-multi-platform.yml
examples/Basics/Arrays/Array/: Array.cc
examples/Basics/Arrays/Array2D/: Array2D.cc
examples/Basics/Arrays/ArrayObjects/: ArrayObjects.cc  Module.cc  Module.hh
examples/Basics/Camera/MoveEye/: MoveEye.cc
examples/Basics/Camera/Orthographic/: Orthographic.cc
examples/Basics/Camera/Perspective/: Perspective.cc
examples/Basics/Color/Brightness/: Brightness.cc
examples/Basics/Color/ColorVariables/: ColorVariables.cc
examples/Basics/Color/Hue/: Hue.cc
examples/Basics/Color/LinearGradient/: LinearGradient.cc
examples/Basics/Color/RadialGradient/: RadialGradient.cc
examples/Basics/Color/Relativity/: Relativity.cc
examples/Basics/Color/Saturation/: Saturation.cc
examples/Basics/Color/WaveGradient/: WaveGradient.cc
examples/Basics/Control/Conditionals1/: Conditionals1.cc
examples/Basics/Control/Conditionals2/: Conditionals2.cc
examples/Basics/Control/EmbeddedIteration/: EmbeddedIteration.cc
examples/Basics/Control/Iteration/: Iteration.cc
examples/Basics/Control/LogicalOperators/: LogicalOperators.cc
examples/Basics/Data/CharactersStrings/: CharactersStrings.cc
examples/Basics/Data/DatatypeConversion/: DatatypeConversion.cc
examples/Basics/Data/IntegersFloats/: IntegersFloats.cc
examples/Basics/Data/TrueFalse/: TrueFalse.cc
examples/Basics/Data/VariableScope/: VariableScope.cc
examples/Basics/Data/Variables/: Variables.cc
examples/Basics/Form/Bezier/: Bezier.cc
examples/Basics/Form/PieChart/: PieChart.cc
examples/Basics/Form/PointsLines/: PointsLines.cc
examples/Basics/Form/Primitives3D/: Primitives3D.cc
examples/Basics/Form/RegularPolygon/: RegularPolygon.cc
examples/Basics/Form/ShapePrimitives/: ShapePrimitives.cc
examples/Basics/Form/Star/: Star.cc
examples/Basics/Form/TriangleStrip/: TriangleStrip.cc
examples/Basics/Image/Alphamask/: Alphamask.cc
examples/Basics/Image/BackgroundImage/: BackgroundImage.cc
examples/Basics/Image/CreateImage/: CreateImage.cc
examples/Basics/Image/LoadDisplayImage/: LoadDisplayImage.cc
examples/Basics/Image/Pointillism/: Pointillism.cc
examples/Basics/Image/RequestImage/: RequestImage.cc
examples/Basics/Image/Transparency/: Transparency.cc
examples/Basics/Input/Clock/: Clock.cc
examples/Basics/Input/Constrain/: Constrain.cc
examples/Basics/Input/Easing/: Easing.cc
examples/Basics/Input/Keyboard/: Keyboard.cc
examples/Basics/Input/KeyboardFunctions/: KeyboardFunctions.cc
examples/Basics/Input/Milliseconds/: Milliseconds.cc
examples/Basics/Input/Mouse1D/: Mouse1D.cc
examples/Basics/Input/Mouse2D/: Mouse2D.cc
examples/Basics/Input/MouseFunctions/: MouseFunctions.cc
examples/Basics/Input/MousePress/: MousePress.cc
examples/Basics/Input/MouseSignals/: MouseSignals.cc
examples/Basics/Input/StoringInput/: StoringInput.cc
examples/Basics/Lights/Directional/: Directional.cc
examples/Basics/Lights/Mixture/: Mixture.cc
examples/Basics/Lights/MixtureGrid/: MixtureGrid.cc
examples/Basics/Lights/OnOff/: OnOff.cc
examples/Basics/Lights/Reflection/: Reflection.cc
examples/Basics/Lights/Spot/: Spot.cc
examples/Basics/Math/AdditiveWave/: AdditiveWave.cc
examples/Basics/Math/Arctangent/: Arctangent.cc
examples/Basics/Math/Distance1D/: Distance1D.cc
examples/Basics/Math/Distance2D/: Distance2D.cc
examples/Basics/Math/DoubleRandom/: DoubleRandom.cc
examples/Basics/Math/Graphing2DEquation/: Graphing2DEquation.cc
examples/Basics/Math/IncrementDecrement/: IncrementDecrement.cc
examples/Basics/Math/Interpolate/: Interpolate.cc
examples/Basics/Math/Map/: Map.cc
examples/Basics/Math/Noise1D/: Noise1D.cc
examples/Basics/Math/Sine/: Sine.cc
examples/Pete/: Atoms.cc  BezierVertex.cc  Box2D.cc  BrightnessPixels.cc  Circle.cc  Distance3D.cc  EdgeDection.cc  Fireworks.cc  Font.cc  LightFalloff.cc  LineMesh.cc  LineSegments.cc  RGBCubeRetained.cc  SDFLine.cc  SetVertex.cc  Shader.cc  ShaderArt.cc  Snake.cc  Tanks.cc  TexturedBox.cc  TexturedShape.cc  ThreadPool.h  ThreadPoolNoise3D.cc  ThreadedNoise3D.cc  Triangle.cc  Verlet.cc
examples/Pete/data/: BouncyBall.glsl  ShaderArt.glsl
glad/include/glad/: glad.h
include/: processing.h  processing_color.h  processing_debug.h  processing_enum.h  processing_java_compatability.h  processing_json.h  processing_math.h  processing_opengl.h  processing_opengl_color.h  processing_opengl_framebuffer.h  processing_opengl_shader.h  processing_opengl_texture.h  processing_pfont.h  processing_pgraphics.h  processing_pimage.h  processing_pmaterial.h  processing_profile.h  processing_properties.h  processing_pshader.h  processing_pshader_builder.h  processing_pshape.h  processing_pshape_svg.h  processing_psurface.h  processing_style.h  processing_task_queue.h  processing_texture_manager.h  processing_time.h  processing_utils.h  processing_xml.h
src/: PerlinNoise.cc  pdiff.cc  processing.cc  processing_color.cc  processing_json.cc  processing_math.cc  processing_opengl.cc  processing_opengl_framebuffer.cc  processing_opengl_shader.cc  processing_opengl_texture.cc  processing_pfont.cc  processing_pgraphics.cc  processing_pimage.cc  processing_pmaterial.cc  processing_pshader.cc  processing_pshape.cc  processing_pshape_svg.cc  processing_psurface.cc  processing_stb_image_impl.cc  processing_style.cc  processing_texture_manager.cc  processing_utils.cc  processing_xml.cc
(+279 files in other folders)
